# case-backend-python

./: .coveragerc  .env  .gitignore  Dockerfile  Dockerfile.dev  README.md  READMETESTE.md  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.ini
.docker/: entrypoint.sh
.github/workflows/: ci.yaml  deployment.yaml
docs/: requirements.txt
docs/uml/application/: vowels.wsd  words.wsd
docs/uml/use-cases/sort-usecase/: sort-sequence.wsd  sort.wsd
docs/uml/use-cases/vowels-usecase/: vowel-count-sequence.wsd  vowel-count.wsd
heroku/: Procfile
scripts/: clear_cache.sh  lint.sh  tests.sh  tests_coverage.sh
src/: app.py
src/infra/http/: __init__.py  errors.py  validation.py
src/words/application/: vowels.py  words.py
src/words/resources/: __init__.py  sort.py  vowel_count.py
tests/infra/: flask_test.py
tests/words/unit/application/: group_words_test.py  vowels_test.py  words_test.py
tests/words/unit/resources/: sort_test.py  vowel_count.py
