[project]
name = "pilar_project"
version = ""
description = ""
authors = [
    {name = "alohaguilherme", email = "gteodorodossantos@gmail.com"},
]
dependencies = [
    "pytest>=7.1.3",
    "coverage>=6.4.4",
    "flask>=2.2.2",
    "autopep8>=1.7.0",
    "Werkzeug>=2.2.2",
    "uwsgi>=2.0.20",
    "flask-restful>=0.3.9",
    "pytest-flask>=1.2.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
